@@ -4,6 +4,10 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
+
+2011-05-05  Michael Jahn
+	* fixed movie plugin AllMovie, it is now AllRovi
+
 2011-04-27  Filippo Valsorda
     * New Interfilmes plugin by Elencarlos Soares
 
